# JamJamBeat

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  HAND_GESTURE_AGENT_TEAM.md  Makefile  README.md  cloudbuild.backend.yaml  docker-compose.yml  pyproject.toml
model/: .gitignore  HAND_GESTURE_AGENT_TEAM.md  QUICKSTART.md  frontend_추론설정가이드.md  pyproject.toml  upload_to_wandb.py
model/cron/: README.md  generate_9_cron_jobs.sh  install_cron_jobs.sh  install_model_comparison_cron.sh  run_model_pipeline.py  uninstall_model_comparison_cron.sh  watch_progress.sh
model/data_fusion/: .gitignore  MERGE_GUIDE.md  README.md  build_training_datasets.py  build_training_datasets_onlyval.py
model/data_fusion/데이터평가표/: .gitignore  dataset_ranking.md
model/experiment_agent/: __init__.py  agent_config.yaml  agent_graph.py  registry.py  run_agent.py  tools.py
model/frontend-test/: FRONTEND_WEBCAM_SEQUENCE_MONITOR_CURRENT.md  index.html  quickstart.md
model/frontend-test/src/: main.js  styles.css
model/frontend/eval_dashboard/: README.md  app.js  full_source_inference.py  generate_dashboard_data.py  index.html  serve_dashboard.py  share_via_cloudflared.sh  share_via_ngrok.sh  styles.css
model/model_evaluation/: .gitignore  aggregate_comparison_results.py  evaluation_runtime.py  export_onnx_spatial.py
model/model_evaluation/inference_scripts/: README.md  compare_runtime_variants.py  generate_full_landmark_inference.py
model/model_evaluation/모델검증관련파일/: classifier_output_and_visualization.md  evaluation_guide.md  evaluation_runtime.py  모델 검증 파이프라인 해설.md  모델검증Dashboard.jsx
model/model_pipelines/: EVALUATION.md  LOSS_FUNCTION_EXPERIMENTS.md  SEQUENCE_SLIDING_WINDOW_AUDIT.md  _shared.py  checkpoint_verification.py  new_run_pipeline.py  run_all.py  run_no_pretrained.py  run_pipeline.py  run_pipeline_reduce.py
model/모델비교관련문서/: hand_preprocess.py  model_comparison_mlp.md  model_comparison_total.md  model_comparison_v1.md  report_lr_training_curves.md
model/선정모델폴더/: .gitignore
model/영상추론비교/: README.md  comparison_manifest.json  run_comparison.py
model/총평/: 재현성_인과해석_리서치.md  학습보정요소_정리.md  현재로그_커버리지_체크리스트.md
(+547 files in other folders)
