# pyproject.toml - model/ 전체 통합 dependency definition
# model_pipelines + model_evaluation venv를 하나로 통합
[project]
name = "jamjambeat-model"
version = "0.1.0"
description = "Unified dependencies for JamJamBeat model pipelines and evaluation"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.0",
    "mediapipe>=0.10.32",
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "torch>=2.9.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
